# autofix-ghc

./: README.md  autofix-ghc.cabal  cabal.config  stack.yaml
src/: Main.hs  Parser.hs  Process.hs  Text.hs
test/: Test.hs
test/expected/: Data.out
test/inputs/: Data.hs  Data.warn
