name:                autofix-ghc
version:             0.1.0.0
synopsis:            Editor-independent way to fix GHC warnings
homepage:            http://github.com/alonid/autofix-ghc
license:             GPL-2
license-file:        LICENSE
author:              Dan Aloni
maintainer:          alonid@gmail.com
category:            Devtool
build-type:          Simple
cabal-version:       >=1.10

executable autofix-ghc
  hs-source-dirs:    src/
  main-is:           Main.hs
  ghc-options:       -Wall -O2
  other-modules:     Text
                   , Process
                   , Parser
  -- other-extensions:
  build-depends:       attoparsec           >= 0.12.1.6
                     , base                 >= 4.7    &&  < 5.0
                     , filepath
                     , lifted-base          >= 0.2.3.6
                     , optparse-applicative >= 0.11   &&  < 0.13
                     , process-extras
                     , regex-base           >= 0.93.2
                     , regex-tdfa           >= 1.2.1
                     , regex-tdfa-text
                     , temporary
                     , text
                     , transformers         >= 0.4.2.0
  -- hs-source-dirs:
  default-language:    Haskell2010