name:                autofix-ghc
version:             0.1.0.0
synopsis:            Editor-independent way to fix GHC warnings
homepage:            http://github.com/da-x/autofix-ghc
license:             GPL-2
license-file:        LICENSE
author:              Dan Aloni
maintainer:          alonid@gmail.com
category:            Devtool
build-type:          Simple
cabal-version:                              >=1.10

library
  hs-source-dirs:    lib/
  ghc-options:       -Wall -O2
  exposed-modules:     Text
                     , Process
  build-depends:       ansi-terminal        >= 0.6.2.3
                     , attoparsec           >= 0.12.1.6
                     , base                 >= 4.7    &&  < 5.0
                     , bytestring           >= 0.10.6.0
                     , containers           >= 0.5.6.2
                     , directory            >= 1.2.2.0
                     , exceptions
                     , filepath
                     , lens                 >= 4.13
                     , lifted-base          >= 0.2.3.6
                     , monad-control        >= 1.0.0.5
                     , mtl                  >= 2.2.1
                     , optparse-applicative >= 0.11   &&  < 0.13
                     , process-extras
                     , regex-base           >= 0.93.2
                     , regex-tdfa           >= 1.2.1
                     , regex-tdfa-text
                     , temporary
                     , text
                     , transformers         >= 0.4.2.0
  default-language:    Haskell2010

executable autofix-ghc
  hs-source-dirs:    src/
  main-is:           Main.hs
  ghc-options:       -Wall -O2
  other-modules:     Parser
  build-depends:       ansi-terminal        >= 0.6.2.3
                     , autofix-ghc
                     , attoparsec           >= 0.12.1.6
                     , base                 >= 4.7    &&  < 5.0
                     , bytestring           >= 0.10.6.0
                     , containers           >= 0.5.6.2
                     , directory            >= 1.2.2.0
                     , exceptions
                     , filepath
                     , lens                 >= 4.13
                     , lifted-base          >= 0.2.3.6
                     , monad-control        >= 1.0.0.5
                     , mtl                  >= 2.2.1
                     , optparse-applicative >= 0.11   &&  < 0.13
                     , process-extras
                     , regex-base           >= 0.93.2
                     , regex-tdfa           >= 1.2.1
                     , regex-tdfa-text
                     , temporary
                     , text
                     , transformers         >= 0.4.2.0
  default-language:    Haskell2010

test-suite autofix-ghc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Paths_autofix_ghc
  build-depends:       ansi-terminal        >= 0.6.2.3
                     , base
                     , autofix-ghc
                     , bytestring           >= 0.10.6.0
                     , containers           >= 0.5.6.2
                     , directory            >= 1.2.2.0
                     , exceptions
                     , filepath
                     , lens                 >= 4.13
                     , lifted-base
                     , monad-control        >= 1.0.0.5
                     , mtl                  >= 2.2.1
                     , process
                     , process-extras
                     , temporary
                     , text
                     , transformers
  ghc-options:         -Wall
  default-language:    Haskell2010

